<resources>
    <string name="app_name">OK Metronomer</string>
    <string name="bpm_label">BPM</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="increase_bpm">Increase BPM</string>
    <string name="decrease_bpm">Decrease BPM</string>
    <string name="increase_bpm_five">Increase BPM by 5</string>
    <string name="decrease_bpm_five">Decrease BPM by 5</string>
    <string name="time_signature_format">Time signature %1$s</string>
    <string name="beat_indicator_format">Beat %1$d of %2$d</string>
    <string name="bpm_input_hint">Enter BPM</string>
    <string name="toggle_theme">Toggle theme</string>
    <string name="more_options">More options</string>
    <string name="about">About</string>
    <string name="licenses">Licenses</string>
    <string name="close">Close</string>
    <string name="about_version">Version 1.0</string>
    <string name="about_description">A precise, sample-accurate metronome for musicians.</string>
    <string name="source_code">Source Code</string>
    <string name="github_url" translatable="false">https://github.com/ieshaan12/Metronome</string>
</resources>